add_subdirectory(opencl)
add_subdirectory(arm)
add_subdirectory(x86)
add_subdirectory(cuda)
add_subdirectory(fpga)
add_subdirectory(host)
add_subdirectory(npu)
add_subdirectory(xpu)
add_subdirectory(mlu)
add_subdirectory(bm)
add_subdirectory(apu)
add_subdirectory(rknpu)
add_subdirectory(huawei_ascend_npu)
add_subdirectory(imagination_nna)
