FILE(GLOB BASE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
FILE(GLOB PROFILE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/profile/*.cc)
FILE(GLOB SUBGRAPH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/subgraph/*.cc)
FILE(GLOB OPTIMIZER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/optimizer/*.cc ${CMAKE_CURRENT_SOURCE_DIR}/optimizer/mir/*.cc)
FILE(GLOB TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc ${CMAKE_CURRENT_SOURCE_DIR}/test/arena/*.cc)
configure_file(version.h.in version.h)

add_library(core OBJECT ${BASE_SRC})
