message(STATUS "add lite kernels")

set(lite_kernel_deps type_system kernel op op_registry context tensor any CACHE INTERNAL "" FORCE)
if(LITE_THREAD_POOL)
  set(lite_kernel_deps ${lite_kernel_deps} thread_pool)
endif()

add_subdirectory(host)
add_subdirectory(arm)
add_subdirectory(cuda)
add_subdirectory(x86)
add_subdirectory(opencl)
add_subdirectory(fpga)
add_subdirectory(npu)
add_subdirectory(xpu)
add_subdirectory(mlu)
add_subdirectory(apu)
add_subdirectory(bm)
add_subdirectory(rknpu)
add_subdirectory(metal)
add_subdirectory(huawei_ascend_npu)
add_subdirectory(imagination_nna)
add_subdirectory(intel_fpga)
